fix alignments

--- a/app/styles/onboarding-card.module.css
+++ b/app/styles/onboarding-card.module.css
@@ -1,14 +1,14 @@
 .onboarding-card{
     min-height: 60vh;
-    max-width: 40vw;
+    min-width: 40vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 2px solid var(--color-lightgrey);
-    margin: 80px auto;
     background-color: var(--color-cultured);
     border-radius: 10px;
+    margin-top: 80px;
 }
 @media screen and (max-width: 625px) {
     .onboarding-card{
